app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 /*homepage css*/
.pagination{
  margin-top: 0px;
  margin-bottom: 10px;
}

.fixed-panel {
  padding-left: 0px;
  padding-right: 0px;
}

.input-panel-body {
  padding: 5px;
}

.col-md-8.col-lg-8{
   padding-left:  0;
}
.col-xs-4{
    padding-left: 0;
}
.col-xs-8{
    padding-right: 0;
}
.col-md-4.col-lg-4 {
    padding-right: 0;
}

#list_header{
    margin-top: 25px;
    margin-bottom: 12px;
    font-weight: 300;
}

#hir_header{
    margin: 25px 0 12px 0;
}

/* this is for a button associated with a table above it. It is set close
   to the table. See agency admin home view for example. */
.table_action_button {
  margin-bottom: 30px;
  margin-top: -10px;
}

.margin-top {
   margin-top: 20px;
}

.navbar {
    background: #0C7BA1;
}

.navbar-default .navbar-nav li > a{
    color: #FFFFFF;
}

.content {
    padding-top: 50px;
}

.navbar-default .navbar-brand {
    color: #FFFFFF;
}

.button-menu{
    padding-top: 16px;
    padding-left: 1px;
}

/* next three settings are to anchor the footer at the bottom of each page */
/* See:   http://stackoverflow.com/questions/21933356/
    sticky-bootstrap-footer-overlaping-content-of-page */
html {
  position: relative;
  min-height: 100%;
}
body {
  margin-bottom: 20px;
}
.footer {
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 45px;
    background-color: #0C7BA1;
}

.footer > a {
    color: #fff;
    text-decoration: underline;     
}

.navbar-default .navbar-text > a {
    color: yellow;
}
.navbar-default .navbar-text{
    position: relative;
    display: block;
    color: white;
}

.navbar-default .navbar-nav li > a:hover {
    background: #12aee2;
    color: #fff;
}

.navbar-default .navbar-header a:hover {
    background: #12aee2;
    color: #fff;
}

.form_div {
    background: #fcf9f9;
    padding: 5px;
    overflow: hidden;
}

.navbar-default .navbar-text{
    position: relative;
    display: block;
    color: white;
}
.navbar-default .navbar-text > a {
    color: yellow;
}
/*end of homepage css*/


.form_button {
  float: right;
}

#login_form {
    padding-top: 12px;
}

.normal-label {
  font-weight: normal;
}

/*session#new css*/
.fa.fa-lg.fa-long-arrow-right{
    color: #fff;
    padding-top: 6px;
    position: absolute;

}
.button-group > label{
    padding-left: 10px;
    font-weight: 0 ;
}

.checkbox-inline{
    margin-top: 2px;
}
.button-group{
    padding-bottom: 10px;
}
.button-group label{
     color: #666;
     font-family: "ArialMT","Arial";
}
.fa.fa-minus{
    font-size: 10px;
    color:#666;
}
.col-xs-6 {
    top: 80px;
}
#user_remember_me{
    margin-left: 10px;
    margin-top: -2px;

}

.form-control#user_email{
    width: 82%;
}
#pas_forgot{
    margin-left: 10px;
    font-size: 1em;
}
.jumbotron {
    padding-top: 40px;
}
.jumbotron p{
    font-size: 1em;

}
.form-control#user_password{
    width: 42%;
    display: inline;
    padding-right: 20px;
}

.btn.btn-primary#login-button {
    width: 140px;
    height: 39px;
    line-height: 25px;
    color: #ffffff;
    background-color: #006dcc;;
    border-color: #0044cc;
}
.jumbotron h2#login-text {
   font-family:  "Arial-BoldMT","Arial Bold","Arial";
   font-weight: 700;
   font-style: normal;
   font-size: 32px;
   color: #666;
   position: relative;
}
/*end of session#new css*/

/* form errors css */
.field_with_errors .form-control {
   border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  .form-control {
    color: #a94442;
  }
}

#error-explanation {
  color: #FF0000;
  ul {
    color: #FF0000;;
      margin: 0 0 30px 0;
    }
}
/*form errors css end */

/** Spinner back panel **/
.opaque > *:not(.spinner) {
    opacity: 0.7;
}
/** Spinner back panel end **/

/* Pagination div css */
.pagination-div {
    position: relative;
}
/* Pagination div css end */
/* Warning text */
.warning-text {
  color: red;
}
/* Warning text end */

